# evbayiro-irr

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: DATASET_README.md  DATA_DICTIONARY.md  company_proxy_cases.csv  company_proxy_cases.py  compare_solvers.py  expanded_benchmark.py  paper_benchmark.py  requirements.txt  sourced_benchmark.py  sourced_cases.csv  summarize_expanded_results.py
benchmarks/results/: expanded_benchmark.csv  expanded_benchmark_case_mix.csv  expanded_benchmark_group_summary.csv  expanded_benchmark_summary.csv  paper_benchmark.csv  paper_benchmark_summary.csv  sourced_benchmark.csv  sourced_benchmark_expanded_methods.csv  sourced_benchmark_expanded_methods_summary.csv  sourced_benchmark_summary.csv
src/evbayiro_irr/: __init__.py  __main__.py  cashflows.py  cli.py  core.py  diagnostics.py  e3c.py  examples.py  method.py  results.py  solvers.py
tests/: test_evbayiro_irr.py
tools/: build_zenodo_dataset_zip.ps1  publish_zenodo_dataset.ps1
