[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "evbayiro-irr"
version = "0.2.0"
description = "Decision-first IRR analysis anchored at the Required Rate of Return."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Osasenaga David Evbayiro", email = "senaga.tech.hub@gmail.com" }
]
keywords = [
  "irr",
  "npv",
  "capital-budgeting",
  "finance",
  "evbayiro",
  "Evbayiro-RRR-first",
  "rrr",
  "required-rate-of-return"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iammsenaga/evbayiro-irr"
Repository = "https://github.com/iammsenaga/evbayiro-irr"
Issues = "https://github.com/iammsenaga/evbayiro-irr/issues"
Changelog = "https://github.com/iammsenaga/evbayiro-irr/blob/main/CHANGELOG.md"

[project.scripts]
evbayiro-irr = "evbayiro_irr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evbayiro_irr = ["py.typed"]
